	Fixed bug where linking to urls like ../../ would produce an extra traling slash ../..//.
	Fixed bug where the template cdate functionality was using an old 2.x API call. Patch contributed by vectorjohn.
	Fixed bug where urls to the same site but different protocol would be converted when relative_urls where set to false. Patch contributed by Ted Rust.
	Removed default border=0 on tables for the default value of valid_elements.
Version 3.2.6 (2009-08-19)
	Added new wordcount plugin, this will display the number of typed words as you write. Contributed by Andrew Ozz.
	Added new getNext and getPrev methods to DOM utils. These will return the first matching sibling.
	Fixed bug where it was impossible to place the caret after a table on Gecko. It will now add a paragraph after tables.
	Fixed bug where inline dialogs would fail if used in a window opened using a showModalDialog. Patch contributed by Derek Britt.
	Fixed bug where IE could sometimes render a unknown runtime error on invalid input HTML.
	Fixed bug where some incorrectly placed tables wouldn't be moved outside the paragraphs on IE.
	Fixed bug where uppercase script/style element wouldn't be handled correctly and converted to valid lowercase.
	Fixed bug where some WebKit versions on Mac OS X would produce issues with hidden select fields.
	Fixed bug where the media plugin would fail on WebKit since the node wasn't properly imported to the right document.
	Fixed bug where absolute URLs for the TinyMCE script using a base href element would cause loading problems in IE 6/7.
	Fixed bug where pasting using the paste plugin wasn't possible on IE with to restrictive security settings.
	Fixed bug where pasting of whitespace was impossible using the new custom paste method.
	Fixed bug where pasting on some WebKit browsers would not work if you pasted specific contents due to a WebKit bug.
	Fixed bug where doctypes with multiple lines would not be parsed correctly by the fullpage plugin. Patch contributed by Colin.